skiplang/compiler/invalid_tests/typechecking/always_inline_gc.sk
@always_inline
@gc
fun collectAndInline(x: Int): Int {
  x + 1
}

untracked fun main(): void {
  print_string("c=" + collectAndInline(1))
}
